# mdserve

./: CLAUDE.md  Cargo.toml  README.md
docs/: architecture.md
skills/mdserve/: SKILL.md
src/: app.rs  main.rs
templates/: main.html
