[package]
name = "mdserve"
version = "2.0.0"
authors = ["Jose Fernandez <me@jrfernandez.com>"]
edition = "2021"
rust-version = "1.82.0"
license = "MIT"
description = "Markdown preview server for AI coding agents"
repository = "https://github.com/jfernandez/mdserve"
homepage = "https://github.com/jfernandez/mdserve"
documentation = "https://github.com/jfernandez/mdserve#readme"

[dependencies]
axum = "0.7.9"
tokio = { version = "1.0", features = ["rt-multi-thread", "macros", "net", "fs", "time", "sync", "io-util"] }
tokio-stream = { version = "0.1", features = ["sync"] }
markdown = "1.0"
clap = { version = "4.5.45", features = ["derive"] }
tower-http = { version = "0.6.6", features = ["fs", "cors"] }
notify = "8.2.0"
serde = { version = "1.0", features = ["derive"] }
anyhow = "1.0"
minijinja = { version = "2.12.0", features = ["json"] }
minijinja-embed = { version = "2.12.0", default-features = false }

[build-dependencies]
minijinja-embed = { version = "2.12.0", default-features = false }

[profile.release]
strip = true
lto = true
codegen-units = 1
panic = "abort"

[dev-dependencies]
axum-test = "16.0"
tempfile = "3.0"
